--- a/css/leanorama.infobox.css
+++ b/css/leanorama.infobox.css
@@ -12,14 +12,14 @@
 .leanorama-infobox {
     position:       fixed;
     top:            1rem;
-    right:          1rem;
+    left:          1rem;
     padding:        0.7rem;
     font-size:      1.5rem;
     line-height:    1.3em;
     font-family:    sans-serif;
     color:          white;
     letter-spacing: 0.06em;
-    text-align:     right;
+    text-align:     left;
 }
 
 .leanorama-infobox-bg {
